force-app/main/default/objects/XML_Template__c/XML_Template__c.object-meta.xml
<CustomObject>
    <label>XML Template</label>
    <nameField>
        <label>Template Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>XML Templates</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>