force-app/main/default/objects/XML_Template__c/fields/CNMC_Process_Type__c.field-meta.xml
<CustomField>
    <fullName>CNMC_Process_Type__c</fullName>
    <label>CNMC Process Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>B1</fullName>
                <label>B1 - Alta de suministro</label>
            </value>
            <value>
                <fullName>C1</fullName>
                <label>C1 - Baja de suministro</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>