force-app/main/default/objects/XML_Template__c/fields/CodigoProceso__c.field-meta.xml
<CustomField>
    <fullName>CodigoProceso__c</fullName>
    <label>Codigo Proceso</label>
    <length>10</length>
    <required>true</required>
    <type>Text</type>
</CustomField> 