force-app/main/default/objects/XML_Template__c/fields/Country__c.field-meta.xml
<CustomField>
    <fullName>Country__c</fullName>
    <label>Country</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>ES</fullName>
                <default>true</default>
                <label>Spain</label>
            </value>
            <value>
                <fullName>PT</fullName>
                <label>Portugal</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>