force-app/main/default/objects/XML_Template__c/fields/Process_Code__c.field-meta.xml
<CustomField>
    <fullName>Process_Code__c</fullName>
    <label>Process Code</label>
    <length>10</length>
    <required>true</required>
    <type>Text</type>
</CustomField>