force-app/main/default/objects/XML_Template__c/fields/Process_Type__c.field-meta.xml
<CustomField>
    <fullName>Process_Type__c</fullName>
    <label>Process Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>ACTIVATION</fullName>
                <label>Gas Supply Activation</label>
            </value>
            <value>
                <fullName>DEACTIVATION</fullName>
                <label>Gas Supply Deactivation</label>
            </value>
            <value>
                <fullName>CAMBIO_COMERCIALIZADORA_GAS</fullName>
                <isActive>false</isActive>
                <label>CAMBIO_COMERCIALIZADORA_GAS</label>
            </value>
            <value>
                <fullName>CAMBIO_COMERCIALIZADORA_TITULAR_GAS</fullName>
                <isActive>false</isActive>
                <label>CAMBIO_COMERCIALIZADORA_TITULAR_GAS</label>
            </value>
            <value>
                <fullName>CAMBIO_TITULAR_GAS</fullName>
                <isActive>false</isActive>
                <label>CAMBIO_TITULAR_GAS</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>