force-app/main/default/objects/XML_Template__c/fields/Template_Body__c.field-meta.xml
<CustomField>
    <fullName>Template_Body__c</fullName>
    <label>Template Body</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>