force-app/main/default/objects/XML_Template__c/fields/Version__c.field-meta.xml
<CustomField>
    <fullName>Version__c</fullName>
    <description>Version of the XML template</description>
    <inlineHelpText>Template version number</inlineHelpText>
    <label>Version</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>